--- a/RandomPasswordGenerator/app/src/main/res/layout/activity_main.xml
+++ b/RandomPasswordGenerator/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="131dp"
-        android:layout_height="47dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Password"
         app:layout_constraintBottom_toBottomOf="parent"
