--- a/RandomPasswordGenerator/app/src/main/res/layout/activity_main.xml
+++ b/RandomPasswordGenerator/app/src/main/res/layout/activity_main.xml
@@ -29,22 +29,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.309" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_width="195dp"
-        android:layout_height="54dp"
-        android:hint="Enter an integer"
+<!--
+    <EditText
         android:id="@+id/enter"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Enter an integer"
+        android:inputType="number"
+        tools:layout_editor_absoluteX="139dp"
+        tools:layout_editor_absoluteY="396dp" /> -->
+    <com.google.android.material.textfield.TextInputLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
 
+      </com.google.android.material.textfield.TextInputLayout>
+
+      <com.google.android.material.textfield.TextInputEditText
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:hint="Enter an integer"
+          android:inputType="number"
+          android:id="@+id/enter"
+          app:layout_constraintBottom_toTopOf="@+id/button"
+          app:layout_constraintEnd_toEndOf="@+id/textView"
+          app:layout_constraintStart_toStartOf="@+id/textView"
+          app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
